ui: fixed the light/dark mode background colours since I missed that when I did the last refactor.

--- a/src/app/pages/projects-page/projects-page.component.css
+++ b/src/app/pages/projects-page/projects-page.component.css
@@ -1,5 +1,4 @@
 :host {
     background-color: #1B1B1D;
     display: block;
-    padding-top: 1rem;
 }
